--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-white text-gray-900 transition-colors duration-300;
+}
+
+dark body {
+  @apply bg-black text-white transition-colors duration-300;
+}
